--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,6 @@
       <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
-        <!--
         <configuration>
           <scaladocClassName>org.scala_tools.vscaladoc.Main</scaladocClassName>
           <scalaJars>
@@ -148,8 +147,8 @@
               <version>1.0-SNAPSHOT</version>
             </scalaJar>
           </scalaJars>
+          <scalaVersion>${scala.version}</scalaVersion>
         </configuration>
-        -->
       </plugin>
     </plugins>
   </reporting>
