add timeout before run filter on classes list remove case class filter

--- a/pom.xml
+++ b/pom.xml
@@ -142,9 +142,9 @@
           <scaladocClassName>org.scala_tools.vscaladoc.Main</scaladocClassName>
           <scalaJars>
             <scalaJar>
-              <groupId>org.scala-tools</groupId>
-              <artifactId>vscaladoc</artifactId>
-              <version>1.0-SNAPSHOT</version>
+              <groupId>${project.groupId}</groupId>
+              <artifactId>${project.artifactId}</artifactId>
+              <version>${project.version}</version>
             </scalaJar>
           </scalaJars>
           <scalaVersion>${scala.version}</scalaVersion>
