--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Copyright 2007 scala-tools.org
-  
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-  
-  http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing,
-  software distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions
-  and limitations under the License.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.scala-tools</groupId>
@@ -24,13 +6,13 @@
     <version>1.2</version>
   </parent>
   <artifactId>vscaladoc</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>${project.artifactId}</name>
   <inceptionYear>2008</inceptionYear>
   <scm>
-    <connection>scm:svn:http://vscaladoc.googlecode.com/svn/trunk</connection>
-    <developerConnection>scm:svn:https://vscaladoc.googlecode.com/svn/trunk</developerConnection>
-    <url>http://code.google.com/p/vscaladoc/source/browse</url>
+    <connection>scm:svn:http://vscaladoc.googlecode.com/svn/tags/vscaladoc-1.0</connection>
+    <developerConnection>scm:svn:https://vscaladoc.googlecode.com/svn/tags/vscaladoc-1.0</developerConnection>
+    <url>http://code.google.com/p/vscaladoc/source/browse/tags/vscaladoc-1.0</url>
   </scm>
   <issueManagement>
     <system>code.google</system>
@@ -160,6 +142,7 @@
       <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
+<!--
         <configuration>
           <scaladocClassName>org.scala_tools.vscaladoc.Main</scaladocClassName>
           <scalaJars>
@@ -171,6 +154,7 @@
           </scalaJars>
           <scalaVersion>${scala.version}</scalaVersion>
         </configuration>
+-->
       </plugin>
     </plugins>
   </reporting>
