[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <version>1.2</version>
   </parent>
   <artifactId>vscaladoc</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <name>${project.artifactId}</name>
   <inceptionYear>2008</inceptionYear>
   <scm>
