--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.scala-tools</groupId>
     <artifactId>scala-tools-parent</artifactId>
-    <version>1.2</version>
+    <version>1.3</version>
   </parent>
   <artifactId>vscaladoc</artifactId>
   <version>1.1-SNAPSHOT</version>
@@ -142,19 +142,10 @@
       <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
-<!--
         <configuration>
-          <scaladocClassName>org.scala_tools.vscaladoc.Main</scaladocClassName>
-          <scalaJars>
-            <scalaJar>
-              <groupId>${project.groupId}</groupId>
-              <artifactId>${project.artifactId}</artifactId>
-              <version>${project.version}</version>
-            </scalaJar>
-          </scalaJars>
+          <vscaladocVersion>1.0</vscaladocVersion>
           <scalaVersion>${scala.version}</scalaVersion>
         </configuration>
--->
       </plugin>
     </plugins>
   </reporting>
