--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,16 @@
   <parent>
     <groupId>org.scala-tools</groupId>
     <artifactId>scala-tools-parent</artifactId>
-    <version>1.2</version>
+    <version>1.3</version>
   </parent>
   <artifactId>vscaladoc</artifactId>
-  <version>1.0</version>
+  <version>1.1</version>
   <name>${project.artifactId}</name>
   <inceptionYear>2008</inceptionYear>
   <scm>
-    <connection>scm:svn:http://vscaladoc.googlecode.com/svn/tags/vscaladoc-1.0</connection>
-    <developerConnection>scm:svn:https://vscaladoc.googlecode.com/svn/tags/vscaladoc-1.0</developerConnection>
-    <url>http://code.google.com/p/vscaladoc/source/browse/tags/vscaladoc-1.0</url>
+    <connection>scm:svn:http://vscaladoc.googlecode.com/svn/tags/vscaladoc-1.1</connection>
+    <developerConnection>scm:svn:https://vscaladoc.googlecode.com/svn/tags/vscaladoc-1.1</developerConnection>
+    <url>http://code.google.com/p/vscaladoc/source/browse/tags/vscaladoc-1.1</url>
   </scm>
   <issueManagement>
     <system>code.google</system>
@@ -142,19 +142,10 @@
       <plugin>
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
-<!--
         <configuration>
-          <scaladocClassName>org.scala_tools.vscaladoc.Main</scaladocClassName>
-          <scalaJars>
-            <scalaJar>
-              <groupId>${project.groupId}</groupId>
-              <artifactId>${project.artifactId}</artifactId>
-              <version>${project.version}</version>
-            </scalaJar>
-          </scalaJars>
+          <vscaladocVersion>1.0</vscaladocVersion>
           <scalaVersion>${scala.version}</scalaVersion>
         </configuration>
--->
       </plugin>
     </plugins>
   </reporting>
