--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,30 @@
                 <include>shBrush*.js</include>
               </includes>
             </aggregation>
+            <aggregation>
+              <!-- remove files after aggregation (default: false) -->
+              <removeIncluded>false</removeIncluded>
+              <!-- insert new line after each concatenation (default: false) -->
+              <insertNewLine>true</insertNewLine>
+              <output>${project.build.directory}/classes/org/scala_tools/vscaladoc/content.js</output>
+              <!-- files to include, path relative to output's directory or absolute path-->
+              <includes>
+                <include>content_0.js</include>
+                <include>cookie.js</include>
+              </includes>
+            </aggregation>
+            <aggregation>
+              <!-- remove files after aggregation (default: false) -->
+              <removeIncluded>false</removeIncluded>
+              <!-- insert new line after each concatenation (default: false) -->
+              <insertNewLine>true</insertNewLine>
+              <output>${project.build.directory}/classes/org/scala_tools/vscaladoc/all-classes.js</output>
+              <!-- files to include, path relative to output's directory or absolute path-->
+              <includes>
+                <include>all-classes_0.js</include>
+                <include>cookie.js</include>
+              </includes>
+            </aggregation>
           </aggregations>
         </configuration>
       </plugin>
