--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.scala-tools</groupId>
@@ -8,7 +9,7 @@
   <artifactId>vscaladoc</artifactId>
   <version>1.2-SNAPSHOT</version>
   <name>${project.artifactId}</name>
-  <inceptionYear>2008</inceptionYear>
+  <inceptionYear>2009</inceptionYear>
 
   <issueManagement>
     <system>code.google</system>
@@ -31,14 +32,6 @@
     </repository>
   </repositories>
 
-  <pluginRepositories>
-    <pluginRepository>
-      <id>scala-tools.org</id>
-      <name>Scala-Tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
-    </pluginRepository>
-  </pluginRepositories>
-
   <dependencies>
     <dependency>
       <groupId>org.scala-lang</groupId>
@@ -55,7 +48,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.5</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -101,7 +94,10 @@
               <!-- insert new line after each concatenation (default: false) -->
               <insertNewLine>true</insertNewLine>
               <output>${project.build.directory}/classes/org/scala_tools/vscaladoc/_highlighter/shAll.js</output>
-              <!-- files to include, path relative to output's directory or absolute path-->
+              <!--
+                files to include, path relative to output's directory or
+                absolute path
+              -->
               <includes>
                 <include>shCore*.js</include>
                 <include>shBrush*.js</include>
@@ -113,7 +109,10 @@
               <!-- insert new line after each concatenation (default: false) -->
               <insertNewLine>true</insertNewLine>
               <output>${project.build.directory}/classes/org/scala_tools/vscaladoc/content.js</output>
-              <!-- files to include, path relative to output's directory or absolute path-->
+              <!--
+                files to include, path relative to output's directory or
+                absolute path
+              -->
               <includes>
                 <include>content_0.js</include>
                 <include>cookie.js</include>
@@ -125,7 +124,10 @@
               <!-- insert new line after each concatenation (default: false) -->
               <insertNewLine>true</insertNewLine>
               <output>${project.build.directory}/classes/org/scala_tools/vscaladoc/all-classes.js</output>
-              <!-- files to include, path relative to output's directory or absolute path-->
+              <!--
+                files to include, path relative to output's directory or
+                absolute path
+              -->
               <includes>
                 <include>all-classes_0.js</include>
                 <include>cookie.js</include>
@@ -142,9 +144,41 @@
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
         <configuration>
-          <vscaladocVersion>1.0</vscaladocVersion>
+          <vscaladocVersion>${project.version}</vscaladocVersion>
         </configuration>
       </plugin>
     </plugins>
   </reporting>
+
+  <profiles>
+    <profile>
+      <id>super-helpful-integration-tests</id>
+
+      <activation>
+        <property>
+          <name>shit</name>
+          <value>true</value>
+        </property>
+      </activation>
+
+      <build>
+        <defaultGoal>install</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>shitty-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>clean</goal>
+                  <goal>install</goal>
+                  <goal>test</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
